fixed spacing after font fix

--- a/style.css
+++ b/style.css
@@ -63,11 +63,11 @@ body {
   justify-content: center;
   align-items: center;
 
-  padding: 1.2rem;
+  padding: 1.4rem;
 
   background-color: #fff;
 
-  font-size: 1.6rem;
+  font-size: 1.8rem;
 
   border-radius: 10rem;
   border: none;
